--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "format": "npm prettier --write ."
+    "format:fix": "prettier --write ."
   },
   "dependencies": {
     "next": "^13.0.0",
